feat():scanners fixed bugs fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,6 @@
-# Server Configuration
-server.port=8082
+# Default Profile
+spring.profiles.active=dev
 
-# Database Configuration (H2 File-based)
-spring.datasource.url=jdbc:h2:mem:mushroomdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Thymeleaf
+# Common Configuration
 spring.thymeleaf.cache=false
-
-# Virtual Threads (Spring Boot 3.2+)
 spring.threads.virtual.enabled=true
-
-# Logging
-logging.level.org.springframework.web=INFO
-logging.level.com.mushroom.stockkeeper=DEBUG
