--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,14 +2,14 @@
 server.port=8080
 
 # Database Configuration (PostgreSQL)
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/mushroomdb}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=jdbc:postgresql://192.168.1.50:5432/mariasorganicsdb
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 # Logging
