--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,10 @@
 # Server Configuration
-server.port=8080
+server.port=8090
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=mushroom-dev
 
 # Database Configuration (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://192.168.1.50:5432/mariasorganicsdb
